--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,10 +14,12 @@
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dom-parser": "^1.1.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "expressjs": "^1.0.1",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.4"
+    "mongoose": "^8.9.4",
+    "xml2js": "^0.6.2"
   }
 }
