--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expressjs": "^1.0.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.4",
+    "twilio": "^5.4.2",
     "xml2js": "^0.6.2"
   }
 }
